<package format="2">
    <name>clover_simulation</name>
    <version>0.0.1</version>
    <description>The clover_simulation package provides worlds and launch files for Gazebo.</description>

    <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>

    <author>Alexey Rogachevskiy</author>
    <author>Andrey Ryabov</author>
    <author>Arthur Golubtsov</author>
    <author>Oleg Kalachev</author>
    <author>Svyatoslav Zhuravlev</author>

    <license>MIT</license>

    <url type="website">https://github.com/CopterExpress/clover</url>
    <url type="bugtracker">https://github.com/CopterExpress/clover/issues</url>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>xacro</depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" gazebo_resource_path="${prefix}/resources"/>
    </export>
  </package>
